--- a/Tyler_Trojcak_09_Lab05_SHM_mass_spring_2025.ipynb
+++ b/Tyler_Trojcak_09_Lab05_SHM_mass_spring_2025.ipynb
@@ -809,7 +809,9 @@
         "\n",
         "Briefly answer the following questions.\n",
         "1. (2 points) Does your Euler solution conserve energy? Explain.\n",
-        "1. (2 points) Is the Euler method a good approach for modeling oscillatory motion? Explain."
+        "### The Euler method shows an increase of energy in the system overtime.\n",
+        "1. (2 points) Is the Euler method a good approach for modeling oscillatory motion? Explain.\n",
+        "### The Euler method doesn't work for simple harmonic motion models due to their gain in energy overtime.\n"
       ],
       "metadata": {
         "id": "zmJErlNmv6yr"
@@ -823,9 +825,7 @@
         "plt.figure(figsize=(8,6))\n",
         "plt.plot(time, energy)\n",
         "plt.xlabel(\"Time (s)\")\n",
-        "plt.ylabel(\"Energy (J)\")\n",
-        "\n",
-        "# The Euler method shows the oscilator constantly gaining energy which makes it a terrible model for oscilation problems."
+        "plt.ylabel(\"Energy (J)\")\n"
       ],
       "metadata": {
         "id": "lRa3bzopv4au",
@@ -876,7 +876,9 @@
         "\n",
         "Briefly answer the following questions.\n",
         "1. (2 points) What is different about the Euler vs Euler-Cromer method?  Which is better to use when modeling simple harmonic motion?\n",
-        "1. (2 points) Does the Euler-Cromer solution conserve energy? Justify your answer."
+        "### The Euler-Cromer method is better when it comes to harmonic motion due to how it calculates slightly differently.\n",
+        "1. (2 points) Does the Euler-Cromer solution conserve energy? Justify your answer.\n",
+        "### The Euler-Cromer method conserves energy unlike the Euler method which shows an increase in energy overtime."
       ],
       "metadata": {
         "id": "XsPgZivgr0-k"
@@ -1006,9 +1008,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 560
         },
-        "outputId": "19845b5a-2d94-4e2f-9e1c-87cfeb522ce9"
+        "outputId": "41f944b3-17ed-4387-9297-4809f672072a"
       },
-      "execution_count": 297,
+      "execution_count": 300,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1018,7 +1020,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 297
+          "execution_count": 300
         },
         {
           "output_type": "display_data",
@@ -1044,7 +1046,8 @@
         "  ```python\n",
         "  plt.scatter(x, vx, c=time)\n",
         "  ```\n",
-        "* Interpret your results. What does the graph of velocity vs. position show?"
+        "* Interpret your results. What does the graph of velocity vs. position show?\n",
+        "### The graph shows a circle of motion for the simple harmonic oscillator."
       ],
       "metadata": {
         "id": "n3vrmVN5_5MT"
